--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "author": "maxmechanic",
   "license": "MIT",
   "devDependencies": {
+    "@types/geojson": "^1.0.2",
+    "@types/node": "^8.0.7",
     "ava": "^0.20.0",
     "rimraf": "^2.6.1",
     "typescript": "^2.4.1"
+  },
+  "dependencies": {
+    "@turf/turf": "^4.5.2"
   }
 }
