--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^2.4.1"
   },
   "dependencies": {
-    "@turf/turf": "^4.5.2"
+    "@turf/turf": "^4.5.2",
+    "date-fns": "^1.28.5",
+    "suncalc": "^1.8.0"
   }
 }
